saojoao2024/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Rockwell';
  src: url('./assets/FONTE/Rockwell.ttc')format('truetype');
}

*{
  font-family: 'Rockwell';
}



body{
  overflow-x: hidden;
  background-image: url('./assets/Background/Background.png');
}

